# PersonalScraper

./: README.md  architecture.md  examples.py  main.py  pyproject.toml  requirements.txt  test_sample.py  todo.md
src/: error_handling.py  preprocessing.py  scraper.py  storage.py
src/personal_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
